--- a/SampleSource2020/Screens/Top/Top.storyboard
+++ b/SampleSource2020/Screens/Top/Top.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ywd-Pv-Ski">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ywd-Pv-Ski">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -84,6 +84,7 @@
                         <segue destination="NMn-lH-iwi" kind="show" identifier="AboutClass" id="CK6-Br-Nuc"/>
                         <segue destination="SzI-cr-8Kz" kind="show" identifier="AboutDatePicker" id="XIw-IB-rWi"/>
                         <segue destination="ZPk-79-Umx" kind="show" identifier="AboutFunction" id="jZu-gM-y7A"/>
+                        <segue destination="B0R-1W-6nD" kind="show" identifier="AboutFunction2" id="c2U-9G-Cav"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uiy-kL-m7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -127,6 +128,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NHW-3k-Fph" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-93" y="27"/>
+        </scene>
+        <!--AboutFunction2-->
+        <scene sceneID="iHJ-tm-zGh">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AboutFunction2" id="B0R-1W-6nD" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="oG7-tc-d85"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cOD-ME-NE3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-89" y="67"/>
         </scene>
     </scenes>
 </document>
