--- a/SampleSource2020/Screens/Top/Top.storyboard
+++ b/SampleSource2020/Screens/Top/Top.storyboard
@@ -86,6 +86,7 @@
                         <segue destination="ZPk-79-Umx" kind="show" identifier="AboutFunction" id="jZu-gM-y7A"/>
                         <segue destination="B0R-1W-6nD" kind="show" identifier="AboutFunction2" id="c2U-9G-Cav"/>
                         <segue destination="Vac-md-jfo" kind="show" identifier="AboutFunction3" id="m8f-cD-VLI"/>
+                        <segue destination="A3y-Do-f27" kind="show" identifier="Renshu1" id="VI9-vu-eMn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uiy-kL-m7T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -149,6 +150,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZF3-Ci-KXV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-88" y="105"/>
+        </scene>
+        <!--Renshu1-->
+        <scene sceneID="r89-V1-MGZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Renshu1" id="A3y-Do-f27" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="Tad-K9-Jmd"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BO7-gB-Uma" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-120" y="156"/>
         </scene>
     </scenes>
 </document>
